@@ -1,6 +1,7 @@
 1.22.2 /
 [Alexandr Topilski]
 - ZPOPMAX, ZPOPMIN commands
+- Clients monitor
 
 1.22.1 / December 2, 2018
 [Alexandr Topilski]
