@@ -123,6 +123,7 @@ const QString trSearch = QObject::tr("Search");
 const QString trBackup = QObject::tr("Backup");
 const QString trRestore = QObject::tr("Restore");
 const QString trNext = QObject::tr("Next");
+const QString trRefresh = QObject::tr("Refresh");
 const QString trPrevious = QObject::tr("Previous");
 const QString trTryToConnect = QObject::tr("Try to connect");
 const QString trAddItem = QObject::tr("Add item");
@@ -168,6 +169,7 @@ const QString trRenameKey = QObject::tr("Rename key");
 const QString trCreateKey = QObject::tr("Create key");
 const QString trViewKeysDialog = QObject::tr("View keys dialog");
 const QString trPubSubDialog = QObject::tr("Publish/Subscribe dialog");
+const QString trClientsMonitorDialog = QObject::tr("Clients monitor dialog");
 const QString trPublish = QObject::tr("Publish");
 const QString trEncodeDecode = QObject::tr("Encode/Decode");
 const QString trEncode = QObject::tr("Encode");
