@@ -123,6 +123,7 @@ extern const QString trSearch;
 extern const QString trBackup;
 extern const QString trRestore;
 extern const QString trNext;
+extern const QString trRefresh;
 extern const QString trPrevious;
 extern const QString trTryToConnect;
 extern const QString trAddItem;
@@ -168,6 +169,7 @@ extern const QString trCreateKey;
 extern const QString trRenameKey;
 extern const QString trViewKeysDialog;
 extern const QString trPubSubDialog;
+extern const QString trClientsMonitorDialog;
 extern const QString trPublish;
 extern const QString trEncodeDecode;
 extern const QString trEncode;
